[gd_scene load_steps=10 format=2]

[ext_resource path="res://InventoryUI.gd" type="Script" id=1]
[ext_resource path="res://Items/ItemProtoset.tres" type="Resource" id=2]
[ext_resource path="res://addons/gloot/inventory_item.gd" type="Script" id=3]
[ext_resource path="res://addons/gloot/inventory_grid.gd" type="Script" id=4]
[ext_resource path="res://addons/gloot/ctrl_inventory_grid.gd" type="Script" id=5]
[ext_resource path="res://UI/GUI_Essential_Free_v1.1/1.Basic Collection/Flat Theme/Spritesheet/gui_flat.png" type="Texture" id=6]
[ext_resource path="res://UI/InventoryUITheme.tres" type="Theme" id=7]

[sub_resource type="Theme" id=2]
VBoxContainer/colors/backgroundcolor = Color( 0.572549, 0.164706, 0.164706, 1 )

[sub_resource type="TileSet" id=1]
0/name = "gui_flat.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 32, 32, 160, 288 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 0, 4 ), 48, Vector2( 0, 6 ), 255, Vector2( 0, 7 ), 219, Vector2( 0, 8 ), 507, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 1, 4 ), 56, Vector2( 1, 6 ), 63, Vector2( 1, 8 ), 504, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 2, 4 ), 24, Vector2( 2, 6 ), 447, Vector2( 2, 7 ), 438, Vector2( 2, 8 ), 510, Vector2( 4, 0 ), 144, Vector2( 4, 1 ), 146, Vector2( 4, 2 ), 18, Vector2( 4, 4 ), 16 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "gui_flat.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 32, 160, 288 )
1/tile_mode = 1
1/autotile/bitmask_mode = 1
1/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 0, 4 ), 48, Vector2( 0, 6 ), 255, Vector2( 0, 7 ), 219, Vector2( 0, 8 ), 507, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 1, 4 ), 56, Vector2( 1, 6 ), 63, Vector2( 1, 8 ), 504, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 2, 4 ), 24, Vector2( 2, 6 ), 447, Vector2( 2, 7 ), 438, Vector2( 2, 8 ), 510, Vector2( 4, 0 ), 144, Vector2( 4, 1 ), 146, Vector2( 4, 2 ), 18, Vector2( 4, 4 ), 16 ]
1/autotile/icon_coordinate = Vector2( 4, 4 )
1/autotile/tile_size = Vector2( 32, 32 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="InventoryUI" type="Control"]
visible = false
margin_right = 225.0
margin_bottom = 160.0
theme = SubResource( 2 )
script = ExtResource( 1 )

[node name="GUIBackgroundTileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 1, 2, 1, 1, 3, 1, 524289, 4, 1, 524289, 5, 1, 1, 6, 1, 2, 65536, 1, 65536, 65537, 1, 65537, 65538, 1, 65537, 65539, 1, 65537, 65540, 1, 65537, 65541, 1, 65537, 65542, 1, 65538, 131072, 1, 65536, 131073, 1, 65537, 131074, 1, 65537, 131075, 1, 65537, 131076, 1, 65537, 131077, 1, 65537, 131078, 1, 458752, 196608, 1, 458754, 196609, 1, 65537, 196610, 1, 65537, 196611, 1, 65537, 196612, 1, 65537, 196613, 1, 65537, 196614, 1, 65538, 262144, 1, 131072, 262145, 1, 131073, 262146, 1, 131073, 262147, 1, 131073, 262148, 1, 393217, 262149, 1, 393217, 262150, 1, 131074 )

[node name="PlayerCtrlInventoryGrid" type="Control" parent="."]
light_mask = 0
margin_left = 24.0
margin_top = 24.0
margin_right = 184.0
margin_bottom = 120.0
rect_min_size = Vector2( 160, 96 )
script = ExtResource( 5 )
field_dimensions = Vector2( 16, 16 )
inventory_path = NodePath("../PlayerInventoryGrid")

[node name="PlayerInventoryGrid" type="Node" parent="."]
script = ExtResource( 4 )
item_protoset = ExtResource( 2 )
size = Vector2( 10, 6 )

[node name="Blueberry" type="Node" parent="PlayerInventoryGrid"]
script = ExtResource( 3 )
protoset = ExtResource( 2 )
prototype_id = "Blueberry"

[node name="Pear" type="Node" parent="PlayerInventoryGrid"]
script = ExtResource( 3 )
protoset = ExtResource( 2 )
prototype_id = "Pear"
properties = {
"grid_position": Vector2( 0, 1 )
}

[node name="Cherry" type="Node" parent="PlayerInventoryGrid"]
script = ExtResource( 3 )
protoset = ExtResource( 2 )
prototype_id = "Cherry"
properties = {
"grid_position": Vector2( 0, 2 )
}

[node name="InventoryLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 69.0
margin_bottom = 22.0
theme = ExtResource( 7 )
text = "Inventory"

[node name="WorldCtrlInventoryGrid" type="Control" parent="."]
visible = false
margin_right = 1600.0
margin_bottom = 640.0
rect_min_size = Vector2( 1600, 640 )
script = ExtResource( 5 )
inventory_path = NodePath("../WorldInventoryGrid")

[node name="WorldInventoryGrid" type="Node" parent="."]
script = ExtResource( 4 )
item_protoset = ExtResource( 2 )
size = Vector2( 50, 20 )

[connection signal="item_dropped" from="PlayerCtrlInventoryGrid" to="." method="_on_PlayerCtrlInventoryGrid_item_dropped"]
